# learnprojects

./: .gitignore
ANTLR3/: Eval.g  Eval.java  ExprLexer.java
ANTLR3/3.1/: Expr.g  ExprLexer.java  ExprParser.java
ANTLR3/3.2/: Expr.g  ExprLexer.java  ExprParser.java
ANTLR3/3.3/: Expr.g  ExprParser.java  Test.java
AlgosSharp/: AlgosSharp.sln
JNI/: .gitignore  com_example_HelloWorldJNI.cpp  com_example_HelloWorldJNI.h
JNI/com/example/: ExampleParametersJNI.java  HelloWorldJNI.java
algorithms/: Bag.java  BinarySearch.java  BruteForceSearch.java  ExampleSort.java  Exercise_1_1_12.java  Exercise_1_1_13.java  Exercise_1_1_9.java  Exercise_1_2_1.java  FixedCapacityStackOfStrings.java  ProgramMain.java  Queue.java  ResizingArrayStack.java  ShellSort.java  Stack.java  ThreeSum.java  javacompile.sh  pom.xml
algorithms.old/: .gitignore  Exercise_1_1_11.java  Exercise_1_1_18.java  Exercise_1_1_27.java  FixedCapacityStack.java  InsertionSort.java  SelectionSort.java  SortCompare.java  TwoSumFast.java  Util.java  javavars.sh
algorithms.old/data/: populate.sh
algorithms/old-algos/: App.java  Exercise_1_1_14.java  Exercise_1_1_19.java  Exercise_1_1_26.java  javarun.sh
algos/: .gitignore  pom.xml
algos/src/main/java/algos/: App.java
geotools/: pom.xml
geotools/src/main/java/org/za/hash/: Csv2Shape.java
gst-shared-ctx/: .gitignore  CMakeLists.txt
gst-shared-ctx.shaders/: CMakeLists.txt
gst-shared-ctx.shaders/src/: glad.c  main.cpp
gst-shared-ctx.shaders/src/include/glad/: glad.h
gst-shared-ctx/shaders/: copyShader.frag  copyShader.vert  mainShader.frag
gst-shared-ctx/src/: GstPlayer.cpp  GstPlayer.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  VideoSurface.cpp  VideoSurface.h  glfwrender.cpp  glfwrender.h  main.cpp
gstreamer/btut3/: CMakeLists.txt
gstreamer/btut3/src/: main.cpp
gstreamer/btut4/: CMakeLists.txt
gstreamer/btut4/src/: main.cpp
jvideocodec/: .gitignore  build.gradle  settings.gradle
jvideocodec/gradle/wrapper/: gradle-wrapper.properties
jvideocodec/src/main/java/org/dyndns/ratel/: Main.java
keymacro/: keypress.py  readkey.py
learnclion/: CMakeLists.txt  main.cpp
mediahub/: pom.xml
pandas-learn/: main.py  pyproject.toml
perlinnoise/: .gitignore  build.gradle  pom.xml  settings.gradle
perlinnoise/gradle/wrapper/: gradle-wrapper.properties
perlinnoise/src/main/groovy/org/za/hash/: MainApp.groovy
perlinnoise/src/main/groovy/pn/: MainApp.groovy
perlinnoise/src/main/java/org/za/hash/: App.java
perlinnoise/src/test/java/org/za/hash/: AppTest.java
procgen/: index.html  main.js
testvideostream/: .gitignore  manage.py
testvideostream/mainapp/: views.py
testvideostream/mainapp/static/mainapp/css/: main.css
testvideostream/mainapp/static/mainapp/js/: app.js
testvideostream/mainapp/templates/mainapp/: home.html
testvideostream/testvideo/: settings.py  urls.py  wsgi.py
